--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ ul {
   background: var(--darkenImage), url('./assets/BackgroundHome.jpg');
   background-size: cover;
   background-position: center;
+  animation: BackroundAnimation 10s alternate infinite;
 }
 #musicPage {
   background: var(--darkenImage), url('./assets/BackgroundPage1.jpg');
@@ -131,6 +132,7 @@ ul {
 #navbarLogo {
   height: 2.8rem;
   margin: 1rem;
+  margin-top: 1.4rem;
   transition: var(--shortTransition);
 }
 .navLinksContainer {
@@ -208,6 +210,12 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
+}
+.homeLogoContainer {
+  animation: var(--fadeIn1s);
+  opacity: 0;
+  animation-delay: 1s;
 }
 #HomePageLogo {
   height: 25rem;
@@ -227,6 +235,9 @@ ul {
   justify-content: center;
   height: 4.8rem;
   font-size: 2.3rem;
+  animation: var(--fadeIn1s);
+  opacity: 0;
+  animation-delay: 1.5s;
 }
 #social-links-home {
   position: absolute;
@@ -234,6 +245,9 @@ ul {
   left: 0;
   font-size: 3rem;
   margin: 1rem;
+  animation: var(--fadeIn1s);
+  opacity: 0;
+  animation-delay: 1.5s;
 }
 /* end of home page */
 
@@ -245,6 +259,14 @@ ul {
 .social-link {
   margin: 0.3rem;
   transition: 0.2s;
+}
+.social-link .border {
+  outline: solid 0.1rem #dd22a5;
+  border: solid 0.3rem #dd22a5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #spotify-link a {
   color: #1ed760;
@@ -258,6 +280,10 @@ ul {
 #bandcamp-link a {
   color: #f2f2f2;
 }
+#instagram-link a {
+  color: #dd22a5;
+}
+
 /* handle hover glowing */
 .social-link:hover,
 #backUpBtn:hover,
@@ -295,6 +321,9 @@ footer a {
 footer a:hover {
   color: var(--primaryColor);
   text-decoration: none;
+}
+footer .social-link {
+  font-size: 2rem;
 }
 
 /* media quarrys */
@@ -392,5 +421,13 @@ footer a:hover {
   }
   100% {
     transform: translateY(0rem);
+  }
+}
+@keyframes BackroundAnimation {
+  0% {
+    background-position-y: 0rem;
+  }
+  100% {
+    background-position-y: -0.9rem;
   }
 }
