--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.6rem;
   font-weight: 400;
 
   /* color-scheme: light dark; */
@@ -17,6 +17,11 @@
 
 @media screen and (max-width: 800px) {
   :root {
-    font-size: 9.5px;
+    font-size: 11px;
+  }
+}
+@media screen and (min-width: 2800px) {
+  :root {
+    font-size: 28px;
   }
 }
