--- a/src/App.css
+++ b/src/App.css
@@ -142,14 +142,23 @@ ul {
   display: flex;
   align-items: center;
 }
-#navbarLogo {
+.navbar-logo {
   height: 2.8rem;
   margin: 1rem;
   margin-top: 1.4rem;
   transition: var(--shortTransition);
 }
+.navbar-logo-mobile {
+  height: 2.3em;
+  margin: 2rem;
+  transition: var(--shortTransition);
+}
 .navLinksContainer {
   display: flex;
+}
+.navlinks-mobile {
+  margin-top: 4rem;
+  font-size: 2.4rem;
 }
 .nav-link {
   color: var(--white);
@@ -301,7 +310,7 @@ ul {
 .social-link:hover,
 #backUpBtn:hover,
 .minimize-btn:hover,
-#navbarLogo:hover {
+.navbar-logo:hover {
   filter: drop-shadow(0 0 0.5rem rgba(255, 255, 255, 0.35));
 }
 /* end of socail links */
@@ -389,10 +398,6 @@ footer .social-link {
     justify-content: right;
     transition: 0.5s linear;
   }
-  .nav-container-minimize {
-    /* transform: translateX(1px); */
-    opacity: 0;
-  }
   .nav {
     background: var(--fadedBlackDark);
     width: 80%;
@@ -403,10 +408,6 @@ footer .social-link {
   }
   #logo-nav-container {
     flex-direction: column;
-  }
-  #navbarLogo {
-    height: 7rem;
-    margin: 4rem;
   }
   .navLinksContainer {
     flex-direction: column;
@@ -480,11 +481,18 @@ footer .social-link {
   margin: 1rem;
 }
 
+.loading-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* selected product page */
 .selected-product {
   z-index: 1;
   position: fixed;
-  top: calc(50% - 25rem);
+  top: 5rem;
   right: calc(50% - 25rem);
   background: var(--white);
   width: calc(100vw - 3rem);
@@ -541,7 +549,78 @@ footer .social-link {
 .option input {
   text-align: center;
   width: 3rem;
+  background: var(--primaryColor);
 }
 .option select {
   width: 7rem;
+  background: var(--primaryColor);
+}
+
+/* Shop mobile  */
+@media screen and (max-width: 1200px) {
+  .products-container {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+}
+@media screen and (max-width: 800px) {
+  .products-container {
+    display: grid;
+    grid-template-columns: auto;
+  }
+  .selected-product {
+    z-index: 1;
+    position: fixed;
+    top: 0rem;
+    right: 2.5rem;
+    background: var(--white);
+    width: calc(100vw - 5rem);
+    max-width: 50rem;
+  }
+}
+
+/* USER BOX */
+.user-box-home {
+  position: absolute;
+  top: 1rem;
+  right: 0.7rem;
+  font-size: 1rem;
+  background: var(--fadedBlackLight);
+  padding: 0.5rem 0.4rem;
+}
+.user-box-page {
+  font-size: 0.9rem;
+}
+.login-link,
+.logout-link {
+  cursor: pointer;
+  background: var(--fadedBlack);
+}
+.profile-pic {
+  margin-left: 1rem;
+  display: flex;
+  border-radius: 50%;
+  width: 3.5rem;
+}
+.user-profile {
+  display: flex;
+  align-items: center;
+}
+.user-profile-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  line-height: 1rem;
+}
+.cart-icon {
+  font-size: 1.5rem;
+  margin-left: 1rem;
+}
+.user-profile-links {
+  display: flex;
+}
+
+.user-box-page-mobile {
+  font-size: 1.5rem;
 }
