--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@ dt {
   justify-content: center;
 }
 .article-poster {
-  max-width: 20rem;
+  max-width: 25rem;
 }
 .article-inner-container {
   max-width: 50%;
@@ -833,6 +833,12 @@ footer .social-link {
   .paypal {
     padding: 1rem 3rem 0 3rem;
   }
+}
+
+.player {
+  border: 0;
+  width: 350px;
+  height: 470px;
 }
 
 /* @media screen and (max-width: 1000px) {
