--- a/src/App.css
+++ b/src/App.css
@@ -837,8 +837,8 @@ footer .social-link {
 
 .player {
   border: 0;
-  width: 350px;
-  height: 470px;
+  width: 20rem;
+  height: 28rem;
 }
 
 /* @media screen and (max-width: 1000px) {
