--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 body {
   overflow-x: hidden;
   animation: var(--fadeIn1s);
-  opacity: 0;
+  /* opacity: 0; */
 }
 
 ul {
@@ -102,26 +102,43 @@ dt {
 }
 .section {
   padding: 6rem;
+  position: relative;
+  z-index: 0;
 }
 /* backround photos */
+
 #home-page {
-  height: 100vh;
-  background: var(--darkenImage), url('./assets/BackgroundHome.jpg');
+  box-shadow: 0 0 6.5rem 2.5rem black;
+  position: relative;
+  z-index: 1;
+}
+
+.home-background {
+  width: 100vw;
+  height: 130vh;
+  background: var(--darkenImage), url('./BackgroundHome.jpg');
   background-size: cover;
   background-position: center;
 }
+
 #music-page {
-  background: var(--darkenImage), url('./assets/BackgroundPage1.jpg');
+  background: var(--darkenImage), url('./BackgroundPage1.jpg');
   background-size: cover;
   background-position: center;
 }
+
 #tours-page {
-  background: var(--darkenImage), url('./assets/BackgroundPage2.jpg');
+  background: var(--darkenImage), url('./BackgroundPage2.jpg');
   background-size: cover;
   background-position: center;
 }
+.scroll-anchor {
+  position: absolute;
+  transform: translateY(-5rem);
+}
+
 #shop-page {
-  background: var(--darkenImage), url('./assets/BackgroundPage2.jpg');
+  background: var(--darkenImage), url('./BackgroundPage2.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -129,6 +146,12 @@ dt {
   background: var(--darkenImage), url('./assets/BackgroundPage1.jpg');
   background-size: cover;
   background-position: center;
+}
+/* parallex */
+.paralex-position {
+  pointer-events: all;
+  position: relative;
+  z-index: -1;
 }
 
 /* article */
@@ -154,9 +177,13 @@ dt {
   font-size: 2rem;
   margin-bottom: 0.5rem;
 }
+.section-heading {
+  font-size: 3.5rem;
+  margin: 1rem;
+}
 .underline {
   background: var(--white);
-  width: 3rem;
+  width: 6rem;
   height: 0.2rem;
   margin-bottom: 1rem;
 }
@@ -175,10 +202,11 @@ dt {
 
 /* navbar */
 .nav {
+  z-index: 10;
   position: fixed;
   width: 100%;
   height: 4rem;
-  background: var(--fadedBlack);
+  background: var(--fadedBlackDark);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -277,6 +305,7 @@ dt {
 #home {
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -284,6 +313,7 @@ dt {
   overflow-x: hidden;
 }
 .home-logo-container {
+  position: absolute;
   animation: var(--fadeIn1s);
   opacity: 0;
   animation-delay: 1s;
@@ -366,15 +396,19 @@ dt {
 
 /* footer */
 footer {
+  position: relative;
+  z-index: 1;
   width: 100%;
   scroll-snap-align: start;
 }
 .footer-container {
-  margin: 1rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 0 6.5rem 3rem black;
+  background: rgb(36, 36, 36);
 }
 .footer-text {
   display: flex;
@@ -400,7 +434,11 @@ footer .social-link {
 /* gallery */
 
 #gallery {
+  margin-bottom: 1rem;
   height: 16rem;
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 0 6.5rem 3rem black;
 }
 .carusel {
   z-index: 0;
