--- a/src/App.css
+++ b/src/App.css
@@ -147,12 +147,6 @@ dt {
   background-size: cover;
   background-position: center;
 }
-/* parallex */
-.paralex-position {
-  pointer-events: all;
-  position: relative;
-  z-index: -1;
-}
 
 /* article */
 .article {
@@ -179,7 +173,7 @@ dt {
 }
 .section-heading {
   font-size: 3.5rem;
-  margin: 1rem;
+  margin: 2rem 0 1rem 0;
 }
 .underline {
   background: var(--white);
@@ -460,13 +454,15 @@ footer .social-link {
   }
   /* home page mobile */
   #home-nav {
-    position: relative;
-
+    position: absolute;
+    bottom: 5rem;
     width: 20rem;
     height: 25rem;
     font-size: 2.3rem;
   }
   #Home-page-logo {
+    position: relative;
+    bottom: 20rem;
     margin-top: 15rem;
     height: 14rem;
   }
