--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,11 @@ dt {
   transition: 0.3s;
   cursor: pointer;
 }
-.btn:hover {
+.tag {
+  width: auto;
+}
+.btn:hover,
+.selected-tag {
   background: var(--primaryColor2);
   color: var(--white);
 }
@@ -534,13 +538,17 @@ footer .social-link {
 }
 
 /* SHOP */
-/* here! */
 .shop-page {
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 6rem;
+}
+.shop-heding {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .products-container {
   display: grid;
@@ -565,6 +573,14 @@ footer .social-link {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+/* filter tags */
+.tags-contaienr {
+  text-align: center;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  /* margin: 0; */
 }
 
 /* selected product page */
